roles/servers/files/10.32.10.52/iptables
# Generated by iptables-save v1.4.7 on Thu Mar 19 11:05:06 2015
*nat
:PREROUTING ACCEPT [19:1362]
:POSTROUTING ACCEPT [8:589]
:OUTPUT ACCEPT [8:589]
COMMIT
# Completed on Thu Mar 19 11:05:06 2015
# Generated by iptables-save v1.4.7 on Thu Mar 19 11:05:06 2015
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [12303:1751663]
-A INPUT -p udp -m udp --dport 53 -m recent --update --seconds 60 --hitcount 11 --name dnslimit --rsource -j DROP 
-A INPUT -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -p icmp -j ACCEPT 
-A INPUT -i lo -j ACCEPT 
-A INPUT -p tcp -m state --state NEW,RELATED,ESTABLISHED -m tcp --dport 22 -j ACCEPT 
-A INPUT -p udp -m state --state NEW,RELATED,ESTABLISHED -m udp --dport 53 -j ACCEPT 
-A INPUT -p udp -m state --state NEW,RELATED,ESTABLISHED -m udp --dport 123 -j ACCEPT 
-A INPUT -j REJECT --reject-with icmp-host-prohibited 
-A FORWARD -j REJECT --reject-with icmp-host-prohibited 
-A OUTPUT -p tcp -m state --state NEW,ESTABLISHED -j ACCEPT 
-A OUTPUT -p udp -m state --state NEW,ESTABLISHED -j ACCEPT 
-A OUTPUT -d 10.32.15.190 -p tcp -m multiport --dports 80,443 -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -d syslog.1rstwap.com -p tcp --dport 11 -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT 
-A OUTPUT -p tcp -m tcp --dport 22 -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT 
-A OUTPUT -p udp -m udp --dport 53 -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT 
-A OUTPUT -p udp -m udp --dport 123 -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT 
-A OUTPUT -o eth0 -p udp -m state --state ESTABLISHED -j ACCEPT 
-A OUTPUT -o lo -j ACCEPT 
COMMIT
# Completed on Thu Mar 19 11:05:06 2015
